<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/b_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_newaccount"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="@drawable/b_login"
        tools:ignore="HardcodedText,MissingConstraints"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/etRepeatPassword"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:onClick="regesterUser"
        app:layout_constraintLeft_toLeftOf="@+id/etRepeatPassword"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/etRepeatPassword"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="280dp"
        android:layout_height="425dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/board_c_account"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="41dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription=""
        tools:ignore="ContentDescription"
        app:layout_constraintHorizontal_bias="0.496" />
    <EditText
        android:id="@+id/etRepeatPassword"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="93dp"
        android:background="@drawable/tv_add_deatiels"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/et_acountensurepassword"
        android:inputType="textPassword|number"
        app:layout_constraintRight_toRightOf="@+id/et_entername"
        app:layout_constraintTop_toBottomOf="@+id/et_entername"
        tools:ignore="LabelFor,RtlHardcoded"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/et_entername"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="51dp"
        android:background="@drawable/tv_add_deatiels"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/et_acountpassword"
        android:inputType="textPassword|number"
        app:layout_constraintLeft_toLeftOf="@+id/et_entername"
        app:layout_constraintRight_toRightOf="@+id/et_entername"
        app:layout_constraintTop_toBottomOf="@+id/et_entername"
        tools:ignore="LabelFor,RtlHardcoded" />

    <EditText
        android:id="@+id/et_4"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/tv_add_deatiels"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/et_acountmail"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="@+id/et_entername"
        app:layout_constraintRight_toRightOf="@+id/et_entername"
        app:layout_constraintTop_toBottomOf="@+id/et_entername"
        tools:ignore="HardcodedText,LabelFor,RtlHardcoded,TextFields" />

    <EditText
        android:id="@+id/et_entername"
        android:hint="@string/et_acountname"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:gravity="center"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="155dp"
        android:background="@drawable/tv_add_deatiels"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="@+id/imageView2"
        app:layout_constraintRight_toRightOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        tools:ignore="HardcodedText,LabelFor"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.521" />
    <TextView
        android:id="@+id/tv_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t_u_want_login"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.086"
        tools:ignore="SpUsage" />



</android.support.constraint.ConstraintLayout>