<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.ahmedibrahim.waher.activities.MainActivity">
    <TextView
        android:id="@+id/tvcreate_newaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/t_u_want_login"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:textStyle="bold"
        android:onClick="onClick_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="SpUsage"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/bf"
        app:layout_constraintVertical_bias="0.042"/>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="102dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ContentDescription" />
    <com.facebook.login.widget.LoginButton
        android:id="@+id/bf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/b_face"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:paddingRight="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlHardcoded,RtlSymmetry"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/bm"/>
    <Button
        android:id="@+id/bm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:paddingRight="10dp"
        android:background="@drawable/b_mail"
        android:text="@string/b_mial"
        android:textColor="#000000"
        android:textStyle="bold"
        android:onClick="button_mail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        tools:ignore="RtlHardcoded,RtlSymmetry"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"/>
</android.support.constraint.ConstraintLayout>
